k8s/media/calibre/resources/calibre.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: config
          persistentVolumeClaim:
            claimName: config-volume
      containers:
        - name: calibre
          image: linuxserver/calibre:8.15.0@sha256:cde48704668d1dcf911653f975b9f16ce28327e486490543f0125ed8088d6701
          volumeMounts:
            - name: media
              subPath: eBooks
              mountPath: /books
            - name: config
              mountPath: /config
          ports:
            - name: web
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
