k8s/media/calibre/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://calibre.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: calibre
    gethomepage.dev/group: Media
    gethomepage.dev/icon: calibre
    gethomepage.dev/name: Calibre
    gethomepage.dev/weight: '10'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host calibre.durbin.casa]
      secretName: durbin-casa-wildcard-cert
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
